--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,7 @@
 node_modules/
-yarn.lock
 .DS_Store
 .vscode/settings.json
+public/bundle.js
+public/bundle.js.map
+public/style.css
+public/style.css.map
