--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,4 @@
 node_modules/
 .DS_Store
 .vscode/settings.json
-public/bundle.js
-public/bundle.js.map
-public/style.css
-public/style.css.map
+public/dist/
